--- a/my-first-html/index.css
+++ b/my-first-html/index.css
@@ -17,6 +17,7 @@ h1,h2,h3 {
 
 body {
     margin: 0;
+    background-color:rgb(230, 220, 220);
 }
 
 /**************************************************************/
@@ -26,10 +27,53 @@ body {
     background-color: aquamarine;
     padding: 50px 16px;
     text-align: center;
+    border-bottom: 5px solid black;
 }
 
 .other {
-    max-width: 800px; 
+    max-width: 800px;   
     margin: auto;
     padding: 50px;
+}
+x
+main {
+    background-color:rgb(230, 220, 220);
+}
+
+section + section {
+    margin-top: 50px;
+}
+
+a:link {
+    color: steelblue;
+}
+
+a:hover {
+    background-color: aquamarine;
+    color: black
+}
+
+a:active {
+    color:white;
+    background-color: black;
+}
+
+.link-oben {
+    padding: 4px 8px;
+    color:steelblue;
+}
+
+
+.link-oben:hover {
+    background-color:rgb(230, 220, 220);
+    color:black;
+}
+
+.link-oben:active {
+    color: white;
+    background-color: black;
+}
+
+.link-oben + .link-oben {
+    margin-left: 50px;
 }
