--- a/my-first-html/index.css
+++ b/my-first-html/index.css
@@ -41,7 +41,7 @@ main {
 }
 
 section + section {
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 a:link {
@@ -77,3 +77,16 @@ a:active {
 .link-oben + .link-oben {
     margin-left: 50px;
 }
+
+.other > * + * {
+    border-top: 3px solid steelblue;
+}
+
+::selection {
+    background-color: aquamarine;
+    color: steelblue;
+}
+
+.other > * + * {
+    margin-top: 50px;
+  }
